--- a/index.html
+++ b/index.html
@@ -152,28 +152,35 @@
             <h2 class="section-title">Наши мастера</h2>
             <ul class="master-list">
                 <li class="master-card">
-                    <img src="" alt="">
+                    <img src="./images/john-smith.jpg" alt="Мастер с татуировкой">
                     <p></p>
                     <span></span>
-                    <div class="master-social-box"><a href="" class="master-social-link"></a><a href=""
-                            class="master-social-link"></a><a href="" class="master-social-link"></a><a href=""
-                            class="master-social-link"></a></div>
+                    <div class="master-social-box"><a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                    </div>
+                        
                 </li>
                 <li class="master-card">
-                    <img src="" alt="">
+                    <img src="./images/michele-doe.jpg" alt="Мастер стрижет виски">
                     <p></p>
                     <span></span>
-                    <div class="master-social-box"><a href="" class="master-social-link"></a><a href=""
-                            class="master-social-link"></a><a href="" class="master-social-link"></a><a href=""
-                            class="master-social-link"></a></div>
+                    <div class="master-social-box"><a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                    </div>
                 </li>
                 <li class="master-card">
-                    <img src="" alt="">
+                    <img src="./images/alan-black.jpg" alt="Мастер стрижет челку">
                     <p></p>
                     <span></span>
-                    <div class="master-social-box"><a href="" class="master-social-link"></a><a href=""
-                            class="master-social-link"></a><a href="" class="master-social-link"></a><a href=""
-                            class="master-social-link"></a></div>
+                    <div class="master-social-box"><a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                        <a href="" class="master-social-link"></a>
+                    </div>
                 </li>
             </ul>
         </section>
@@ -181,10 +188,10 @@
         <section class="section-box" id="">
             <span class="section-suptitle">старая традиционная школа</span>
             <div class="image-gallery">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <img src="./images/gallery-1.jpg" alt="Мастер с машинкой">
+                <img src="./images/gallery-2.jpg" alt="Мастер бреет с пенкой">
+                <img src="./images/gallery-3.jpg" alt="Мастер с теплым полотенцем">
+                <img src="./images/gallery-4.jpg" alt="Мастер с бритвой бреет затылок">
             </div>
         </section>
 
